# clockodo.py

./: .gitignore  README.md  clockodo-py.po.ru_RU  clockodo-py.pot  flake.nix  pyproject.toml
clockodo/: __init__.py  __main__.py  api.py  clock.py  customer.py  entry.py  i18n.py  interactivity.py  project.py  service.py
